--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -4,14 +4,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<GridPane fx:id="gridPane" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane fx:id="gridPane" alignment="center" hgap="10" minHeight="-Infinity" minWidth="-Infinity" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
-            <ImageView fx:id="PPMimageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="PPMimageView" fitHeight="150.0" fitWidth="200.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="75.0" right="75.0" top="10.0" />
+               </VBox.margin></ImageView>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="openPPMbtn" minHeight="-Infinity" minWidth="-Infinity" onAction="#readPPM" text="Open PPM">
+                  <Button fx:id="openPPMbtn" minHeight="-Infinity" minWidth="-Infinity" onAction="#openPPM" text="Open PPM">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -25,14 +28,7 @@
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding></Button>
-                  <Button fx:id="savePPMbtn" minHeight="-Infinity" minWidth="-Infinity" onAction="#saveJPG" text="Save PPM">
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </HBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding></Button>
-                  <Button fx:id="saveJPGbtn" minHeight="-Infinity" minWidth="-Infinity" onAction="#saveJPG" text="Save JPG">
+                  <Button fx:id="saveJPGbtn" minHeight="-Infinity" minWidth="-Infinity" onAction="#compressAndSaveJPG" text="Compress and save JPG">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
